<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gasto"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_gasto" />
        <item
            android:id="@+id/nav_receita"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_receita" />
        <item
            android:id="@+id/nav_planejamento"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_planejamento" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_sair" />
    </group>

</menu>
