<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_formulario_receita"
    android:id="@+id/frameLayout2" >

    <EditText
        android:id="@+id/receita_fragment_edit_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/receita_fragment_edit_descricao"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/receita_fragment_edit_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/receita_fragment_edit_valor"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/receita_fragment_edit_descricao"
        app:layout_constraintStart_toStartOf="@+id/receita_fragment_edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/receita_fragment_edit_descricao" />

    <EditText
        android:id="@+id/receita_fragment_edit_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/receita_fragment_edit_data"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receita_fragment_edit_valor" />

    <Button
        android:id="@+id/receita_fragment_btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/receita_fragment_btn_salvar"
        app:layout_constraintEnd_toEndOf="@+id/receita_fragment_edit_data"
        app:layout_constraintStart_toStartOf="@+id/receita_fragment_edit_data"
        app:layout_constraintTop_toBottomOf="@+id/receita_fragment_edit_data" />
</android.support.constraint.ConstraintLayout>