<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/login_activity_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/login_activity_edit_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_activity_btn_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_activity_btn_entrar"
        app:layout_constraintEnd_toEndOf="@+id/login_activity_edit_senha"
        app:layout_constraintStart_toStartOf="@+id/login_activity_edit_senha"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_edit_senha" />

    <TextView
        android:id="@+id/login_activity_txt_registrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_activity_txt_registrar"
        app:layout_constraintEnd_toEndOf="@+id/login_activity_btn_entrar"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/login_activity_btn_entrar"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_btn_entrar" />

    <TextView
        android:id="@+id/login_activity_txt_recuperar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_activity_txt_recuperar"
        app:layout_constraintEnd_toEndOf="@+id/login_activity_txt_registrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_activity_txt_registrar"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_txt_registrar" />

    <EditText
        android:id="@+id/login_activity_edit_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/login_activity_edit_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_activity_edit_email"
        app:layout_constraintStart_toStartOf="@+id/login_activity_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_edit_email" />

</android.support.constraint.ConstraintLayout>