<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login.RecuperarActivity">

    <EditText
        android:id="@+id/recuperar_activity_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/recuperar_activity_edit_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recuperar_activity_txtTitulo_email"
        app:layout_constraintTop_toBottomOf="@+id/recuperar_activity_txtTitulo_email" />

    <Button
        android:id="@+id/recuperar_activity_btn_enviar"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/recuperar_activity_btn_enviar"
        app:layout_constraintEnd_toEndOf="@+id/recuperar_activity_edit_email"
        app:layout_constraintStart_toStartOf="@+id/recuperar_activity_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/recuperar_activity_edit_email" />

    <TextView
        android:id="@+id/recuperar_activity_txtTitulo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/recuperar_activity_txtTitulo_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recuperar_activity_txt_mensagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recuperar_activity_txt_mensagem"
        app:layout_constraintEnd_toEndOf="@+id/recuperar_activity_edit_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recuperar_activity_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/recuperar_activity_btn_enviar" />


</android.support.constraint.ConstraintLayout>